[package]
authors = ["Totem Live Accounting <chris.dcosta@totemaccounting.com>"]
description = 'Accounting Engine Pallet'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'pallet-accounting'
version = '1.0.0'
# repository = 'https://github.com/substrate-developer-hub/substrate-pallet-template/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
totem-utils = { path = "../utils", default-features = false }
# primitives
sp-arithmetic = { path = "../../../primitives/arithmetic", default-features = false }
sp-io = { path = "../../../primitives/io", default-features = false }
sp-runtime = { path = "../../../primitives/runtime", default-features = false }
sp-std = { path = "../../../primitives/std", default-features = false }
# frame
frame-support = { path = "../../support", default-features = false }
frame-system = { path = "../../system", default-features = false }
pallet-randomness = { package = "pallet-randomness-collective-flip", path = "../../randomness-collective-flip", default-features = false }
pallet-timestamp = { path = "../../timestamp", default-features = false }
pallet-balances = { path = "../../balances", default-features = false }

[dev-dependencies]
#sr-io = { package = "sp-io", path = "../../primitives/io" }
#sp-primitives = { package = "sp-core", path = "../../primitives/core" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
    "pallet-timestamp/std",
    "sp-io/std",
    "sp-std/std",
]