[package]
authors = ["Totem Accounting <support@totemaccounting.com>"]
description = 'Accounting Engine Pallet'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'pallet-accounting'
version = '1.0.0'
repository = 'https://gitlab.com/totem-tech/totem-lego'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
totem-common = { path = "../common", default-features = false }
# primitives
sp-arithmetic = { path = "../../../primitives/arithmetic", default-features = false }
sp-io = { path = "../../../primitives/io", default-features = false }
sp-runtime = { path = "../../../primitives/runtime", default-features = false }
sp-std = { path = "../../../primitives/std", default-features = false }
# frame
frame-support = { path = "../../support", default-features = false }
frame-system = { path = "../../system", default-features = false }
pallet-randomness = { package = "pallet-randomness-collective-flip", path = "../../randomness-collective-flip", default-features = false }
pallet-timestamp = { path = "../../timestamp", default-features = false }
pallet-balances = { path = "../../balances", default-features = false }

[dev-dependencies]
pallet-accounting = { path = ".", default-features = false, features = ["mock"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "totem-common/std",
    "sp-arithmetic/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
	"frame-support/std",
	"frame-system/std",
    "pallet-randomness/std",
    "pallet-timestamp/std",
    "sp-io/std",
    "sp-std/std",
    "pallet-balances/std",
]
mock = ["totem-common/mock"]
