[package]
authors = ["Totem Accounting <support@totemaccounting.com>"]
description = 'Code that is common to all the Totem Pallets'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'totem-common'
version = '1.0.0'
repository = 'https://gitlab.com/totem-tech/totem-lego'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { path = "../../support", default-features = false }
sp-runtime = { path = "../../../primitives/runtime", default-features = false }
sp-std = { path = "../../../primitives/std", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
	"frame-support/std",
	"sp-runtime/std",
    "sp-std/std",
]
mock = []
