[package]
authors = ["Totem Accounting <support@totemaccounting.com>"]
description = 'Timekeeping Pallet'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'pallet-timekeeping'
version = '1.0.0'
repository = 'https://gitlab.com/totem-tech/totem-lego'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
totem-common = { path = "../common", default-features = false }
# primitives
sp-std = { path = "../../../primitives/std", default-features = false }
# frame
frame-support = { path = "../../support", default-features = false }
frame-system = { path = "../../system", default-features = false }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "codec/std",
    "totem-common/std",
    "sp-std/std",
	"frame-support/std",
	"frame-system/std",
]