[package]
authors = ["Totem Live Accounting <chris.dcosta@totemaccounting.com>"]
description = 'Locking prefunded amounts into the runtime'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'pallet-prefunding'
version = '1.0.0'
# repository = 'https://github.com/substrate-developer-hub/substrate-pallet-template/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
totem-utils = { path = "../../utils" }
# primitives
sp-io = { path = "../../../primitives/io", default-features = false }
sp-runtime = { path = "../../../primitives/runtime", default-features = false }
sp-std = { path = "../../../primitives/std", default-features = false }
# frame
frame-support = { path = "../../../frame/support", default-features = false }
frame-system = { path = "../../../frame/system", default-features = false }
pallet-balances = { path = "../../../frame/balances", default-features = false }
pallet-timestamp = { path = "../../../frame/timestamp", default-features = false }
# totem frame
pallet-accounting = { package = "pallet-accounting", path = "../accounting", default-features = false }

[dev-dependencies]
#sr-io = { package = "sp-io", path = "../../../primitives/io" }
#sp-primitives = { package = "sp-core", path = "../../../primitives/core" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
    "pallet-timestamp/std",
    "sp-std/std",
]